<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp"
    tools:context=".ui.AddTaskFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_wrapper_description"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_description"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_priority"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/text_wrapper_description"
        android:text="@string/task_priority"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="?android:textColorSecondary"
        app:layout_constraintTop_toBottomOf="@id/text_wrapper_description" />


    <RelativeLayout
        android:id="@+id/select_date"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_priority">

        <TextView
            android:id="@+id/label_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_date"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/date_empty" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>