<resources>
    <string name="app_name">AppArchitectureDemo</string>
    <string name="task_description">What Needs to Get Done?</string>
    <string name="task_priority">Priority Task</string>
    <string name="task_date">Due Date</string>
    <string name="demo_task">Make a working demo</string>
    <string name="date_empty">Not Set</string>
    <string name="action_save">Save</string>
    <string name="action_reminder">Set Reminder</string>
    <string name="action_delete">Delete Task</string>
    <string name="ct_dsc_priority">Priority image</string>
    <string name="settings">Settings</string>
    <string name="pref_sortOrder_title">Sort Order</string>
    <string name="pref_sortBy_title">Sort By:</string>
    <string name="pref_summary">Choose an order to sort your tasks.</string>
    <string name="pref_sortBy_default_label">Default</string>
    <string name="pref_sortBy_due_label">Due Date</string>
    <string name="reminder_title">Task Reminder</string>

    <string name="pref_sortBy_key" translatable="false">sort</string>
    <string name="pref_sortBy_default" translatable="false">default</string>
    <string name="pref_sortBy_due" translatable="false">due</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
